2014-07-23  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/config_process.php, operation/agentes/status_monitor.php,
	operation/agentes/estado_generalagente.php,
	operation/agentes/estado_agente.php: tiny fixes for the improve the
	support of postgreSQL databases.

2014-07-23  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_servers.php, include/functions_reporting.php:
	tiny fixes for the improve the support of postgreSQL databases.

2014-07-23  Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/agentes/estado_generalagente.php: fixed the show the
	agent access box when the agent is new without data.
	
	INCIDENT: #1078

2014-07-23  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/agent_wizard.snmp_explorer.php,
	godmode/agentes/module_manager_editor_plugin.php: some fixes for
	the snmp version 3.

2014-07-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

        * include/ajax/events.php: Fixed custom fields view in
        metaconsole event extended view.

        This is my last commit for Pandora guys! Bye ;-)

2014-07-22  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/agent_wizard.snmp_explorer.php,
	include/functions.php: some fixes for the snmp v3.

2014-07-22  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/agent_manager.php: fixed to show the QR code image
	in the creation of a new agent.

2014-07-21  Miguel de Dios <miguel.dedios@artica.es>
	
	* pandoradb.postgreSQL.sql: fixed the SQL.

2014-07-18  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_graph.php, include/functions_reporting.php:
	fixed to show the unknown graph in simple graph.
	
	INCIDENT: #1035

2014-07-17  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/auth/ldap.php, include/auth/mysql.php: fixed the
	parameters with white spaces.
	
	INCIDENT: #1063

2014-07-17  Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_groups.php: added parameter to avoid the check